Less constraints on figure to avoid distorted stretching

--- a/awesome-genome-visualization/src/pages/App.css
+++ b/awesome-genome-visualization/src/pages/App.css
@@ -87,6 +87,7 @@ p {
 
 .card > figure {
   margin: 0;
+  overflow: auto;
 }
 
 .no-screenshot {
@@ -102,7 +103,6 @@ p {
   display: block;
   cursor: pointer;
   width: 100%;
-  max-height: 100%;
   max-width: 400px;
 }
 
